# quorum

./: .env.example  .gitignore  Makefile  README.md  config.json  config.yaml  config_behaviour.md  pyproject.toml
.github/workflows/: branchPush.yaml
api_reference/: chat_completions.yaml
docs/: aggregate_behaviour.md  concatenate_behaviour.md
src/deliberato/: oai_proxy.py
src/quorum/: __init__.py  aggregation.py  api.py  backends.py  config.py  models.py  oai_proxy.py  streaming.py  utils.py
tests/: __init__.py  conftest.py  test_aggregate_strategy.py  test_auth.py  test_chat_completions.py  test_config.py  test_health.py  test_oai_proxy.py  test_parallel_backends.py  test_streaming.py  test_thinking_tag_filter.py
