[project]
name = "deliberato"
version = "0.1.0"
description = "A transparent proxy for OpenAI's chat completions API endpoint"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deliberato"]
